[project]
name = "neuralspot"
version = "0.0.1"
description =  "Autodeploy is an all-in-one tool for automatically deploy, testing, profiling, and package TFLite files on Ambiq EVBs."
readme = "README.md"
authors = [
    {name="Ambiq AI", email="support.aitg@ambiq.com"}
]
requires-python = ">= 3.11, < 3.13"
dependencies = [
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "openpyxl>=3.1.5",
    "soundfile>=0.10.3",
    "pyserial~=3.5",
    "pydantic~=2.8.0",
    "joulescope>=1.1.15",
    "tabulate>=0.9.0",
    "tqdm>=4.66.5",
    "PyOgg",
    "Wave~=0.0.2",
    "erpc@git+https://github.com/ambiqai/erpc.git#egg=develop&subdirectory=erpc_python",
    "PyYAML>=6.0.2",
    "ai-edge-litert==1.3.0",
    "helios-aot",
    "setuptools>=80.9.0",
]

[tool.setuptools]
packages=[
    "neuralspot",
    "neuralspot.rpc",
    "neuralspot.rpc.GenericDataOperations_EvbToPc",
    "neuralspot.rpc.GenericDataOperations_PcToEvb",
    "neuralspot.tools",
    "neuralspot.tools.autodeploy",
    "neuralspot.tools.utils"
]

[tool.setuptools.package-dir]
neuralspot = ""
"neuralspot.rpc" = "neuralspot/ns-rpc/python/ns-rpc-genericdata"
"neuralspot.rpc.GenericDataOperations_EvbToPc" = "neuralspot/ns-rpc/python/ns-rpc-genericdata/GenericDataOperations_EvbToPc"
"neuralspot.rpc.GenericDataOperations_PcToEvb" = "neuralspot/ns-rpc/python/ns-rpc-genericdata/GenericDataOperations_PcToEvb"
"neuralspot.tools" = "tools"
"neuralspot.tools.autodeploy" = "tools/autodeploy"
"neuralspot.tools.utils" = "tools/utils"

[tool.setuptools.package-data]
neuralspot = ["tools/autodeploy/templates/**/*", "tools/ns_platform.yaml", "tools/autodeploy/profiles/ns_pmu_default.yaml"]

[tool.uv.sources]
helios-aot = { path = "../helios-aot" }

[project.scripts]
ns_autodeploy = "neuralspot.tools.ns_autodeploy:main"
ns_perf = "neuralspot.tools.ns_perf:main"

[project.urls]
Homepage = "https://github.com/ambiqai/neuralSPOT"
Documentation = "https://ambiqai.github.io/neuralSPOT"
Repository = "https://github.com/ambiqai/neuralSPOT"


[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"
